--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
           <h1>بوابتك إلى حلول برمجية وتقنية استثنائية</h1>
           <h2> بتركيزنا على الجودة والابتكار، نحقق أحلامك الرقمية ونحولها إلى واقع.</h2>
           <div class="d-flex justify-content-center justify-content-lg-start">
-            <a href="#about" class="btn-get-started scrollto">خدماتنا</a>
-            <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span>اعمالنا</span></a>
+            <a href="#services" class="btn-get-started scrollto">خدماتنا</a>
+            <a href="#about" class="btn-watch-video"><i class="bi bi-play-circle"></i><span>تواصل معنا</span></a>
           </div>
         </div>
        
